Release 3.0.0-BETA - ??

   BREAKING CHANGES

   * Require Java 11 (TIKA-4128).

   * The boilerpipe handler has been moved to tika-handler-boiler-pipe

   Other Changes/Updates
   * Fix bug in DateUtils that stripped timezone information from
     incoming Calendar objects (TIKA-4126).

   * The InputStreamDigester now calculates stream length (TIKA-4016).

Release 2.9.0 - 8/23/2023

   * With user configuration, the PDFParser can now throw an EncryptedDocumentException
     for Microsoft IRM PDF containers with encrypted payloads. Separately,
     the PDFParser now throws an EncryptedDocumentException instead of an IOException
     if the security handler cannot be found (TIKA-4082).

   * Fix bug that led to duplicate extraction of macros from some OLE2 containers (TIKA-4116).

   * Parse iframe's srcdoc as an embedded file (TIKA-3109).

   * Add detection of warc.gz as a specialization of gz and parse as if a standard WARC (TIKA-4048).

   * Allow users to modify the attachment limit size in the /unpack resource (TIKA-4039)
   
   * Fixed write limit bug in RecursiveParserWrapper (TIKA-4055).

   * Add mime detection for many files with thanks to Gregory Lepore (TIKA-3992).
   
   * Fixed iWork 13 keynote detection on files with wrong extension (TIKA-4111).

Release 2.8.0 - 5/11/2023

   * Enable counting and/or parsing of incremental updates in PDFs.  This
     is an experimental feature and may change in later releases (TIKA-4017).

   * Fixed bug that prevented the the loading of CompositeExternalParser in tika-app and
     tika-server-standard. This parser will call exiftool and ffmpeg if those are installed, as was
     the behavior in Tika 1.x. Exclude org.apache.tika.parser.external.CompositeExternalParser
     if you do not want this behavior (TIKA-4022).

   * Removed the shading of tika-parsers-standard-module (TIKA-4038).

   * Enable optional extraction of file system metadata in FileSystemFetcher (TIKA-4035).
