@@ -394,7 +394,6 @@
     <uima.version>3.4.1</uima.version>
     <uimafit.version>3.4.0</uimafit.version>
     <vorbis.version>0.8</vorbis.version>
-    <xerces.version>2.12.2</xerces.version>
     <xmpcore.version>6.1.11</xmpcore.version>
     <zstd.version>1.5.5-5</zstd.version>
     <kafka.version>3.5.1</kafka.version>
@@ -930,11 +929,6 @@
         <version>1.1.10.4</version>
       </dependency>
       <dependency>
-        <groupId>xerces</groupId>
-        <artifactId>xercesImpl</artifactId>
-        <version>${xerces.version}</version>
-      </dependency>
-      <dependency>
           <groupId>commons-fileupload</groupId>
           <artifactId>commons-fileupload</artifactId>
           <version>${commons.fileupload.version}</version>
@@ -1014,13 +1008,6 @@
               <groupId>io.netty</groupId>
               <artifactId>netty-handler</artifactId>
               <version>${netty.version}</version>
-            </exclude>
-            <exclude>
-              <!-- the most recent cve in sonatype for this artifact is 2.11.0,
-                  not at all the version we're using...smh-->
-              <groupId>xerces</groupId>
-              <artifactId>xercesImpl</artifactId>
-              <version>${xerces.version}</version>
             </exclude>
             <!-- these are used by the nlp-module -->
             <exclude>
