@@ -6,6 +6,8 @@ Release 3.0.0-BETA - ??
 
    * The boilerpipe handler has been moved to tika-handler-boiler-pipe
 
+   * Removed xerces2 as a dependency (TIKA-4135).
+
    Other Changes/Updates
    * Fix bug in DateUtils that stripped timezone information from
      incoming Calendar objects (TIKA-4126).
